tests/baselines/reference/duplicateIdentifierRelatedSpans2.errors.txt
[91m● [0m[96mtests/cases/compiler/file1.ts[0m:[93m1[0m:[93m1[0m  [91mError[0m TS6200
| class A { }
  [91m▔▔▔▔▔[0m
Definitions of the following identifiers conflict with those in another file: A, B, C, D, E, F, G, H, I

Conflicts are in this file. [96mtests/cases/compiler/file2.ts[0m:[93m1[0m:[93m1[0m

  | class A { }
    [96m▔▔▔▔▔[0m[91m● [0m[96mtests/cases/compiler/file2.ts[0m:[93m1[0m:[93m1[0m  [91mError[0m TS6200
| class A { }
  [91m▔▔▔▔▔[0m
Definitions of the following identifiers conflict with those in another file: A, B, C, D, E, F, G, H, I

Conflicts are in this file. [96mtests/cases/compiler/file1.ts[0m:[93m1[0m:[93m1[0m

  | class A { }
    [96m▔▔▔▔▔[0m

==== tests/cases/compiler/file1.ts (1 errors) ====
    class A { }
    ~~~~~
!!! error TS6200: Definitions of the following identifiers conflict with those in another file: A, B, C, D, E, F, G, H, I
!!! related TS6201 tests/cases/compiler/file2.ts:1:1: Conflicts are in this file.
    class B { }
    class C { }
    class D { }
    class E { }
    class F { }
    class G { }
    class H { }
    class I { }
==== tests/cases/compiler/file2.ts (1 errors) ====
    class A { }
    ~~~~~
!!! error TS6200: Definitions of the following identifiers conflict with those in another file: A, B, C, D, E, F, G, H, I
!!! related TS6201 tests/cases/compiler/file1.ts:1:1: Conflicts are in this file.
    class B { }
    class C { }
    class D { }
    class E { }
    class F { }
    class G { }
    class H { }
    class I { }
    
Found 2 errors in 2 files.

Errors  Files
     1  tests/cases/compiler/file1.ts[90m:1[0m
     1  tests/cases/compiler/file2.ts[90m:1[0m
